apps/ai-gateway/ai-gateway.log
$ tsx watch src/index.ts
C:\Users\Delluser\Documents\application_folder\Echo_GPT\apps\ai-gateway\src\providers\anthropic.ts:9
import { contentToString } from '@echo-gpt/shared-types';
         ^
SyntaxError: The requested module '@echo-gpt/shared-types' does not provide an export named 'contentToString'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:681:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.22.3
7:53:16 PM [tsx] change in ./..\..\packages\shared-types\dist\session.js Rerunning...
c  ✓ OpenAI provider registered
  ✓ DeepSeek provider registered
  ✓ Ollama provider registered

  Echo AI Gateway running on http://localhost:4001
  Registered 3/6 providers

